--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Matatu Racer</title>
   <style>
-    canvas { background: #e0e0e0; display: block; margin: 0 auto; }
+    canvas { background: #2d3035; display: block; margin: 0 auto; }
     body { text-align: center; font-family: Arial, sans-serif; }
     .high-scores {
       width: 200px;
