fixed dimension of lorry obstacle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Matatu Racer</title>
   <style>
-    canvas { background: #2d3035; display: block; margin: 0 auto; }
+    canvas { background: #bbcae4; display: block; margin: 0 auto; }
     body { text-align: center; font-family: Arial, sans-serif; }
     .high-scores {
       width: 200px;
@@ -82,7 +82,7 @@
           x: Math.random() * (canvas.width - 38), // Account for obstacle width
           y: -66, // Start above the canvas
           width: 38,
-          height: 66
+          height: 120
         };
         
         // Check if new obstacle overlaps with any existing obstacles
