--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
     restartButton.addEventListener('click', resetGame);
     showScoresButton.addEventListener('click', toggleHighScores);
     startButton.addEventListener('click', startGame);
+    // Add this line 
+    
 
     gameLoop();
   </script>
